--- a/docs/source/quickstart.mdx
+++ b/docs/source/quickstart.mdx
@@ -1,8 +1,8 @@
 # Quickstart
 
-This quickstart is intended for developers ready to dive into the code and see an end-to-end example of how to integrate 🤗 Datasets into their model training workflow. If you are a beginner or a non-developer, we recommend starting with our [tutorials](./tutorial), where you will get a more thorough introduction.
+This quickstart is intended for developers who are ready to dive into the code and see an example of how to integrate 🤗 Datasets into their model training workflow. If you're a beginner, we recommend starting with our [tutorials](./tutorial), where you'll get a more thorough introduction.
 
-Each dataset is unique, and depending on the task, some datasets may require additional steps to prepare the data. But you can always use 🤗 Datasets tools to load and process a dataset. Choose the type of dataset you want to work with, and let's get started!
+Each dataset is unique, and depending on the task, some datasets may require additional steps to prepare it for training. But you can always use 🤗 Datasets tools to load and process a dataset. The fastest and easiest way to get started is by loading an existing dataset from the [Hugging Face Hub](https://huggingface.co/datasets). There are thousands of datasets to choose from, spanning many tasks. Choose the type of dataset you want to work with, and let's get started!
 
 <div class="mt-4">
    <div class="w-full flex flex-col space-y-4 md:space-y-0 md:grid md:grid-cols-3 md:gap-y-4 md:gap-x-5">
@@ -16,14 +16,14 @@ Each dataset is unique, and depending on the task, some datasets may require add
       </a>
       <a class="!no-underline border dark:border-gray-700 p-5 rounded-lg shadow hover:shadow-lg" href="/docs/datasets/quickstart#nlp"
          ><div class="w-full text-center bg-gradient-to-r from-orange-300 via-red-400 to-violet-500 rounded-lg py-1.5 font-semibold mb-5 text-white text-lg leading-relaxed">NLP</div>
-         <p class="text-gray-700">Tokenize a dataset and train a model to determine whether a pair of sentences have the same meaning.</p>
+         <p class="text-gray-700">Tokenize a dataset and get it ready for a model to determine whether a pair of sentences have the same meaning.</p>
       </a>
    </div>
 </div>
 
 <Tip>
 
-Check out [Chapter 5](https://huggingface.co/course/chapter5/1?fw=pt) of the Hugging Face course to learn more about other important topics such as loading remote or local datasets, tools for cleaning up a dataset and creating your own dataset.
+Check out [Chapter 5](https://huggingface.co/course/chapter5/1?fw=pt) of the Hugging Face course to learn more about other important topics such as loading remote or local datasets, tools for cleaning up a dataset, and creating your own dataset.
 
 </Tip>
 
@@ -77,9 +77,9 @@ Audio datasets are loaded just like text datasets. However, an audio dataset is 
  'sampling_rate': 16000}
 ```
 
-**4**. Create a function that will preprocess the audio `array` with the feature extractor, and truncate and pad the sequences into tidy rectangular tensors. The most important thing to remember here is to call the audio `array` in the feature extractor since the `array` - the actual speech signal - is the model input.
+**4**. Create a function to preprocess the audio `array` with the feature extractor, and truncate and pad the sequences into tidy rectangular tensors. The most important thing to remember is to call the audio `array` in the feature extractor since the `array` - the actual speech signal - is the model input.
 
-Once you have the `preprocess_function`, use the [`~Dataset.map`] function to speed up processing by applying the function to batches of examples in the dataset.
+Once you have a preprocessing function, use the [`~Dataset.map`] function to speed up processing by applying the function to batches of examples in the dataset.
 
 ```py
 >>> def preprocess_function(examples):
@@ -130,11 +130,11 @@ Use the [`~Dataset.to_tf_dataset`] function to set the dataset format to be comp
 </tf>
 </frameworkcontent>
 
-**7**. Start training with your machine learning framework! Check out the 🤗 Transformers [audio classification guide](https://huggingface.co/docs/transformers/tasks/audio_classification) for an example of how to train a model on an audio dataset.
+**7**. Start training with your machine learning framework! Check out the 🤗 Transformers [audio classification guide](https://huggingface.co/docs/transformers/tasks/audio_classification) for an end-to-end example of how to train a model on an audio dataset.
 
 ## Vision
 
-Image datasets are loaded just like text datasets. However, instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor) to preprocess the dataset. An image input is a sequence of pixel values that represent an image. Applying some data augmentation to an image in computer vision is common to make the model more robust against overfitting. You're free to use any data augmentation library you want, and then you can apply the augmentations to your dataset with 🤗 Datasets. In this quickstart, you'll load the [Beans](https://huggingface.co/datasets/beans) dataset and get it ready for the model to train on and identify disease from the leaf images.
+Image datasets are loaded just like text datasets. However, instead of a tokenizer, you'll need a [feature extractor](https://huggingface.co/docs/transformers/main_classes/feature_extractor#feature-extractor) to preprocess the dataset. Applying data augmentation to an image is common in computer vision to make the model more robust against overfitting. You're free to use any data augmentation library you want, and then you can apply the augmentations with 🤗 Datasets. In this quickstart, you'll load the [Beans](https://huggingface.co/datasets/beans) dataset and get it ready for the model to train on and identify disease from the leaf images.
 
 **1**. Load the Beans dataset by providing the [`load_dataset`] function with the dataset name and a dataset split:
 
@@ -144,7 +144,7 @@ Image datasets are loaded just like text datasets. However, instead of a tokeniz
 >>> dataset = load_dataset("beans", split="train")
 ```
 
-**2**. Now you can add some data augmentations to your dataset with any library ([Albumentations](https://albumentations.ai/), [imgaug](https://imgaug.readthedocs.io/en/latest/), [Kornia](https://kornia.readthedocs.io/en/latest/)) you like. Here, you'll use [torchvision](https://pytorch.org/vision/stable/transforms.html) to randomly change the color properties of an image:
+**2**. Now you can add some data augmentations with any library ([Albumentations](https://albumentations.ai/), [imgaug](https://imgaug.readthedocs.io/en/latest/), [Kornia](https://kornia.readthedocs.io/en/latest/)) you like. Here, you'll use [torchvision](https://pytorch.org/vision/stable/transforms.html) to randomly change the color properties of an image:
 
 ```py
 >>> from torchvision.transforms import Compose, ColorJitter, ToTensor
@@ -154,7 +154,7 @@ Image datasets are loaded just like text datasets. However, instead of a tokeniz
 ... )
 ```
 
-**3**. Create a function to apply your transform to your dataset and generate your model input: `pixel_values`.
+**3**. Create a function to apply your transform to the dataset and generate the model input: `pixel_values`.
 
 ```python
 >>> def transforms(examples):
@@ -192,11 +192,11 @@ Wrap the dataset in [`torch.utils.data.DataLoader`](https://alband.github.io/doc
 </pt>
 </frameworkcontent>
 
-**6**. Start training with your machine learning framework! Check out the 🤗 Transformers [image classification guide](https://huggingface.co/docs/transformers/tasks/image_classification) for an example of how to train a model on an image dataset.
+**6**. Start training with your machine learning framework! Check out the 🤗 Transformers [image classification guide](https://huggingface.co/docs/transformers/tasks/image_classification) for an end-to-end example of how to train a model on an image dataset.
 
 ## NLP
 
-The fastest and easiest way to get started is by loading an existing dataset from the [Hugging Face Hub](https://huggingface.co/datasets). There are thousands of datasets to choose from, spanning many tasks. For the quickstart, you'll load the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/glue/viewer/mrpc) training dataset to train a model to determine whether a pair of sentences mean the same thing. As with all text datasets, you'll need to tokenize the dataset to prepare it for training.
+Text needs to be tokenized into individual tokens by a [tokenizer](https://huggingface.co/docs/transformers/main_classes/tokenizer). For the quickstart, you'll load the [Microsoft Research Paraphrase Corpus (MRPC)](https://huggingface.co/datasets/glue/viewer/mrpc) training dataset to train a model to determine whether a pair of sentences mean the same thing.
 
 **1**. Load the MRPC dataset by providing the [`load_dataset`] function with the dataset name, dataset configuration (not all datasets will have a configuration), and dataset split:
 
@@ -220,7 +220,7 @@ The fastest and easiest way to get started is by loading an existing dataset fro
 >>> tokenizer = AutoTokenizer.from_pretrained("bert-base-uncased")
 ```
 
-**3**. Tokenize the dataset with the tokenizer you just loaded. You should also truncate and pad the text into tidy rectangular tensors. The tokenizer generates three new columns in the dataset: `input_ids`, `token_type_ids`, and an `attention_mask`. These are the inputs to your model.
+**3**. Create a function to tokenize the dataset, and you should also truncate and pad the text into tidy rectangular tensors. The tokenizer generates three new columns in the dataset: `input_ids`, `token_type_ids`, and an `attention_mask`. These are the model inputs.
 
 Use the [`~Dataset.map`] function to speed up processing by applying your tokenization function to batches of examples in the dataset:
 
@@ -276,7 +276,7 @@ Use the [`~Dataset.to_tf_dataset`] function to set the dataset format to be comp
 </tf>
 </frameworkcontent>
 
-**6**. Start training with your machine learning framework! Check out the 🤗 Transformers [fine-tuning tutorial](https://huggingface.co/docs/transformers/training) for an example of how to train a model on your dataset.
+**6**. Start training with your machine learning framework! Check out the 🤗 Transformers [text classification guide](https://huggingface.co/docs/transformers/tasks/sequence_classification) for an end-to-end example of how to train a model on a text dataset.
 
 ## What's next?
 
