--- a/docs/source/share.mdx
+++ b/docs/source/share.mdx
@@ -119,6 +119,30 @@ Congratulations, your dataset has now been uploaded to the Hugging Face Hub wher
 dataset = load_dataset("namespace/your_dataset_name")
 ```
 
+### Ask for a help and reviews
+
+If you need help with a dataset script, feel free to check the [datasets forum](https://discuss.huggingface.co/c/datasets/10): it's possible that someone had similar issues and shared how they managed to fix them.
+
+Then if your script is ready and if you wish your dataset script to be reviewed by the Hugging Face team, you can open a discussion in the Community tab of your dataset with this message:
+
+```
+# Dataset rewiew request for <Dataset name>
+
+## Description
+
+<brief description of the dataset>
+
+## Files to review
+
+- file1
+- file2
+- ...
+
+cc @lhoestq @polinaeterna @mariosasko @albertvillanova
+```
+
+Members of the Hugging Face team will be happy to review your dataset script and give you advice.
+
 ## Datasets on GitHub (legacy)
 
 Datasets used to be hosted on our GitHub repository, but all datasets have now been migrated to the Hugging Face Hub.
@@ -134,10 +158,6 @@ The distinction between a Hub dataset and a dataset from GitHub only comes from 
 
 The code of these datasets are reviewed by the Hugging Face team, and they require test data in order to be regularly tested.
 
-In some cases it makes more sense to open a PR on GitHub:
-
-- when you need the dataset to be reviewed
-- when you need long-term maintenance from the Hugging Face team
-- when there's no clear org name / namespace that you can put the dataset under
+In some rare cases it makes more sense to open a PR on GitHub. For example when you are not the author of the dataset and there is no clear organization / namespace that you can put the dataset under.
 
 For more info, please take a look at the documentation on [How to add a new dataset in the huggingface/datasets repository](https://github.com/huggingface/datasets/blob/master/ADD_NEW_DATASET.md).
