--- a/docs/source/audio_process.mdx
+++ b/docs/source/audio_process.mdx
@@ -5,7 +5,7 @@ This guide shows specific methods for processing audio datasets. Learn how to:
 - Resample the sampling rate.
 - Use [`~Dataset.map`] with audio datasets.
 
-For a guide on processing any type of dataset, take a look at the <a class="bg-pink-200 dark:bg-pink-500 px-1 rounded font-bold underline decoration-pink-900 text-pink-900 dark:bg-pink-500" href="./process">general process guide</a>.
+For a guide on processing any type of dataset, take a look at the [general process guide](./process).
 
 ## Cast
 
