--- a/docs/source/process.mdx
+++ b/docs/source/process.mdx
@@ -11,7 +11,7 @@ This guide will show you how to:
 - Apply a custom formatting transform.
 - Save and export processed datasets.
 
-For more details specific to processing audio datasets, take a look at the <a class="bg-yellow-200 text-yellow-900 dark:bg-yellow-500 px-1 rounded font-bold" href="./audio_process">process audio data</a> guide. If you're working with image datasets, check out the <a class="bg-green-200 text-green-900 dark:bg-green-500 px-1 rounded font-bold" href="./image_process">process image data</a> guide. Text specific processing is covered in the <a class="bg-blue-200 text-blue-900 dark:bg-blue-500 px-1 rounded font-bold" href="./nlp_process">process text data</a> guide.
+For more details specific to processing other dataset modalities, take a look at the [process audio dataset guide](./audio_process), the [process image dataset guide](./image_process) or the [process text dataset guide](./nlp_process).
 
 The examples use the MRPC dataset, but feel free to load any dataset of your choice and following along!
 
