--- a/docs/source/image_load.mdx
+++ b/docs/source/image_load.mdx
@@ -15,7 +15,7 @@ Index into an image dataset using the row index first and then the `image` colum
 
 </Tip>
 
-## Path
+## Local files
 
 You can load a dataset from the image path. Use the [`~Dataset.cast_column`] function to accept a column of image file paths, and decode it into a PIL image with the [`Image`] feature:
 ```py
