--- a/docs/source/share.mdx
+++ b/docs/source/share.mdx
@@ -32,7 +32,7 @@ When loading a dataset from the Hub:
 - If there's no dataset script, all the files in the supported formats are loaded.
 - If there's a dataset script, it is downloaded and executed to download and prepare the dataset.
 
-For more information on how to load a dataset from the Hub, see how to load from the [load-from-the-hub](#load-from-the-hub).
+For more information on how to load a dataset from the Hub, take a look at the [load a dataset from the Hub](./load_hub) tutorial.
 
 ### Create the repository
 
