🖍 apply mario review

--- a/docs/source/process.mdx
+++ b/docs/source/process.mdx
@@ -385,7 +385,7 @@ Dataset(schema: {'chunks': 'string'}, num_rows: 10470)
 
 The [`~Dataset.map`] function could also be used for data augmentation. The following example generates additional words for a masked token in a sentence.
 
-Load and use the [RoBERTA](https://huggingface.co/roberta-base) model in 🤗 Transformer's [FillMaskPipeline](https://huggingface.co/transformers/main_classes/pipelines#transformers.FillMaskPipeline):
+Load and use the [RoBERTA](https://huggingface.co/roberta-base) model in 🤗 Transformers' [FillMaskPipeline](https://huggingface.co/transformers/main_classes/pipelines#transformers.FillMaskPipeline):
 
 ```py
 >>> from random import randint
