--- a/docs/source/image_load.mdx
+++ b/docs/source/image_load.mdx
@@ -23,6 +23,8 @@ Index into an image dataset using the row index first and then the `image` colum
 
 </Tip>
 
+For a guide on how to load any type of dataset, take a look at the <a class="underline decoration-sky-400 decoration-2 font-semibold" href="./loading">general loading guide</a>.
+
 ## Local files
 
 You can load a dataset from the image path. Use the [`~Dataset.cast_column`] function to accept a column of image file paths, and decode it into a PIL image with the [`Image`] feature:
