--- a/docs/source/image_process.mdx
+++ b/docs/source/image_process.mdx
@@ -5,7 +5,7 @@ This guide shows specific methods for processing image datasets. Learn how to:
 - Use [`~Dataset.map`] with image dataset.
 - Apply data augmentations to your dataset with [`~Dataset.set_transform`].
 
-For a guide on processing any type of dataset, take a look at the [general process guide](./process).
+For a guide on how to process any type of dataset, take a look at the <a class="underline decoration-sky-400 decoration-2 font-semibold" href="./process">general process guide</a>.
 
 ## Map
 
